cabeleireira/assets/styles/style.css
/* ... */
.bg-contato {
    background         : url('../../images/background/contato.webp') fixed no-repeat;
    background-position: center;
}

.bg-face {
    background-image   : url('../../images/servicos/facial.jpeg');
    background-size    : cover;
    background-position: center;
    -webkit-mask-image : linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%);
}

.bg-make {
    background         : url('../../images/servicos/make.jpeg') no-repeat;
    background-size    : cover;
    background-position: 0px -2px;
    -webkit-mask-image : linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%);
}

.bg-hair {
    background         : url('../../images/servicos/hair.jpg') no-repeat;
    background-size    : 110%;
    background-position: -10px -11px;
    -webkit-mask-image : linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%);
}

.bg-hair-male {
    background         : url('../../images/servicos/hair-male.jpg') no-repeat;
    background-size    : cover;
    background-position: center;
    -webkit-mask-image : linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%);
}

.bg-nails {
    background         : url('../../images/servicos/nails.jpg') no-repeat;
    background-size    : cover;
    background-position: center;
    -webkit-mask-image : linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%);
}

/* SEÇÃO ESPECIAL */
.initial-price {
    display     : block;
    float       : left;
    margin-right: 5px;
}

.text-caption {
    display: none;
}

.text-caption-nota {
    display    : block;
    width      : 100%;
    color      : #d2d2d2 !important;
    font-size  : 14px !important;
    font-weight: 300 !important;
}

/* SEÇÃO DEPOIMENTOS */
div#cTestimonyInner .carousel-inner,
.carousel-item {
    height          : inherit !important;
    background-color: #ffffff !important;
}

div#cTestimonyInner>.text {
    font-style: italic;
}

#cTestimonyInner img {
    width: 75px;
}

.adjust-arrow-dep {
    filter        : invert(1);
    -webkit-filter: invert(1);
    margin-bottom : 20px;
}

.description-depoimentos {
    display     : block;
    margin-left : 30px;
    margin-right: 30px;
}

.text {
    color      : #000000;
    font-size  : 13px;
    font-weight: 500;
}

/* SEÇÃO CONTATO */
#contato input {
    color                : #ffffff;
    border               : 1px solid #ffffff;
    background-color     : transparent;
    border-radius        : 0px;
    -webkit-border-radius: 0px;
    -moz-border-radius   : 0px;
    -ms-border-radius    : 0px;
    -o-border-radius     : 0px;
}

#contato ::placeholder {
    color: #ffffff;
}

#contato textarea {
    color                : #ffffff;
    border               : 1px solid #ffffff;
    background-color     : transparent;
    border-radius        : 0px;
    -webkit-border-radius: 0px;
    -moz-border-radius   : 0px;
    -ms-border-radius    : 0px;
    -o-border-radius     : 0px;
}

.eni-btn-contato {
    color                : #303030 !important;
    background-color     : #ffffff !important;
    border               : 3px double #303030 !important;
    border-radius        : 0px !important;
    padding-top          : 5px !important;
    padding-left         : 25px !important;
    padding-right        : 25px !important;
    /*color              : #303030 !important;
    background-color     : #ffffff !important;
    border-color         : #303030 !important;
    border               : 3px double #ffffff !important;
    */
    -webkit-border-radius: 0px !important;
    -moz-border-radius   : 0px !important;
    -ms-border-radius    : 0px !important;
    -o-border-radius     : 0px !important;
    -webkit-border-radius: 0px !important;
}

.eni-btn-contato:hover {
    border            : 3px double #ffffff !important;
    color             : #ffffff !important;
    background-color  : transparent !important;
    -webkit-transition: all 0.2s ease-out 0s;
    transition        : all 0.2s ease-out 0s;
    -moz-transition   : all 0.2s ease-out 0s;
    -ms-transition    : all 0.2s ease-out 0s;
    -o-transition     : all 0.2s ease-out 0s;
}

/* SEÇÃO FOOTER */
#footer .fa-facebook-f,
.fa-instagram,
.fa-twitter {
    display              : block;
    padding              : 10px 10px;
    margin               : 0 5px;
    color                : #000000;
    background-color     : #ffffff;
    border-radius        : 50%;
    font-size            : 15px;
    -webkit-border-radius: 50%;
    -moz-border-radius   : 50%;
    -ms-border-radius    : 50%;
    -o-border-radius     : 50%;
}

#footer .fa-facebook-f {
    padding: 10px 15px;
}

#redes-sociais-footer a>i {
    font-size: 17px !important;
}

.nav-link02 {
    color  : #ffffff;
    padding: .5rem 1rem;
}

.nav-link02:hover {
    color: #ffffff;
}

.txt-corp {
    font-size  : 12px;
    font-weight: 400;
}

@media (max-width: 1400px) {

    /* NAVBAR */
    .width-menu {
        padding-left : 150px !important;
        padding-right: 150px !important;
    }

    /* SEÇÃO ESPECIAIS */
    .text-caption {
        display: none;
    }

    .text-caption-nota {
        display    : block;
        width      : 100%;
        color      : #d2d2d2 !important;
        font-size  : 14px !important;
        font-weight: 300 !important;
    }
}
/* ... */

